<resources>
  <string name="app_name">Zensoft HR CRM</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="zensoft_hr">Zensoft HR</string>
  <string name="email_holder">hr@zensoft.io</string>
  <string name="statistics">Statistics</string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="comments">Comments</string>
  <string name="cvs">CV\'s</string>
  <string name="years_of_experience">Years of Experience</string>
  <string name="department">Department</string>
  <string name="attachment">attachment</string>
  <string name="candidate">Candidate</string>
  <string name="date">Date</string>
  <string name="sign_out">Sign out</string>
  <string name="status">status</string>
  <string name="created">created</string>
  <string name="last_published">last published</string>
  <string name="not_defined">not defined</string>
  <string name="user_not_found">user not found</string>
  <string name="date_not_found">date not found</string>
  <string name="comment_not_found">comment not found</string>
  <string name="interviewers">interviewers</string>
  <string name="interviewers_not_found">interviewers not found</string>
  <string name="criteria">Criteria</string>
  <string name="rate">Rate</string>
  <string name="interviewer">Interviewer</string>
  <string name="initial">John Beaver</string>
  <string name="cd_response_null">Candidate response is null</string>
  <string name="candidates_response_null">Candidates list in response is null</string>
  <string name="requests_null">Requests list in response is null</string>
  <string name="vacancies_null">Vacancies list in response is null</string>
  <string name="add_interviewers">Add interviewers</string>
  <string name="ok">OK</string>
  <string name="interview_created">Interview created</string>
  <string name="response_not_successful">response is not successfull</string>
  <string name="set_up_interviewers">set up interviewers and date</string>
  <string name="msg_no_interviews">No interviews found!</string>
  <string name="msg_no_vacancies">No vacancies found!</string>
  <string name="msg_no_candidates">No candidates found!</string>
  <string name="phone">+99677217753</string>
  <string name="btn_save">Save</string>
  <string name="initials_label">Initials</string>
  <string name="name_label">Name</string>
  <string name="title_label">Title</string>
  <string name="city_label">City</string>
  <string name="address_label">Address</string>
  <string name="work_conditions_label">Work conditions</string>
  <string name="working_hours_label">Working hours</string>
  <string name="salary_min_label">Minimum salary</string>
  <string name="salary_max_label">Maximum salary</string>
  <string name="comments_label">comments</string>
  <string name="created_label">Created</string>
  <string name="last_published_label">Latest publishment</string>
  <string name="working_condition">Working condition</string>
  <string name="btn_publish">Publish</string>
  <string name="btn_edit">Edit</string>
  <string name="name">Name</string>
  <string name="title">Title</string>
  <string name="city">City</string>
  <string name="address">Address</string>
  <string name="work_conditions">Work conditions</string>
  <string name="working_hours">Working hours</string>
  <string name="salary_min">Minimum salary</string>
  <string name="salary_max">Maximum salary</string>
  <string name="vcomments">comments</string>
  <string name="vcreated">Created</string>
  <string name="vlast_published">Latest publishment</string>
  <string name="created_by">Created by</string>
  <string name="count">count</string>
  <string name="requirements">requirements</string>
  <string name="modified">modified</string>
  <string name="create_vacancy">Create vacancy</string>
  <string name="edit_profile">Edit profile</string>
  <string name="profile_details">Profile details</string>
  <string name="candidates">Candidates</string>
  <string name="create_interview">Create interview</string>
  <string name="interview_details">Interview details</string>
  <string name="interviews">Interviews</string>
  <string name="requests">Requests</string>
  <string name="vacancies">Vacancies</string>
  <string name="vacancy_details">Vacancy details</string>
  <string name="responsibilities">Responsibilities</string>
  <string name="msg_no_requests">Requests not found</string>
  <string name="create">Create</string>
  <string name="vacancy_created">Vacancy created</string>
</resources>
