<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <TextView
          android:id="@+id/textView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/title"
          android:textColor="@color/createVacancyLabel"
          android:textStyle="bold"/>

      <EditText
          android:id="@+id/cr_vac_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="Add title"
          android:inputType="textMultiLine"
          />

      <TextView
          android:id="@+id/textView9"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/name"
          android:textColor="@color/createVacancyLabel"
          android:textStyle="bold"/>

      <TextView
          android:id="@+id/cr_vac_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/name"
          android:textColor="@color/createVacancyLabel"/>

      <TextView
          android:id="@+id/textView11"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/city"
          android:textColor="@color/createVacancyLabel"
          android:textStyle="bold"/>

      <EditText
          android:id="@+id/cr_vac_city"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="Add city"
          android:inputType="textMultiLine"
          />

      <TextView
          android:id="@+id/textView19"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/address"
          android:textColor="@color/createVacancyLabel"
          android:textStyle="bold"/>

      <EditText
          android:id="@+id/cr_vac_address"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="Add address"
          android:inputType="textMultiLine"
          />

      <TextView
          android:id="@+id/textView20"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/requirements"
          android:textColor="@color/createVacancyLabel"
          android:textStyle="bold"/>

      <TextView
          android:id="@+id/cr_vac_requirements"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorBlack"/>


      <TextView
          android:id="@+id/textView21"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/work_conditions"
          android:textColor="@color/createVacancyLabel"
          android:textStyle="bold"/>

      <EditText
          android:id="@+id/cr_vac_work_conditions"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="work conditions"
          android:inputType="textMultiLine"
          />

      <TextView
          android:id="@+id/textView22"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/responsibilities"
          android:textColor="@color/createVacancyLabel"
          android:textStyle="bold"/>

      <EditText
          android:id="@+id/cr_vac_responsibilities"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="responsibilities"
          android:inputType="textMultiLine"/>

      <TextView
          android:id="@+id/textView23"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/comments"
          android:textColor="@color/createVacancyLabel"
          android:textStyle="bold"/>

      <EditText
          android:id="@+id/cr_vac_comments"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="comments"
          android:inputType="textMultiLine"/>

      <android.support.constraint.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/salary_min"
            android:textColor="@color/createVacancyLabel"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/cr_vac_min_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="min"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView24"
            app:layout_constraintTop_toTopOf="parent"/>
      </android.support.constraint.ConstraintLayout>

      <android.support.constraint.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <EditText
            android:id="@+id/cr_vac_max_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="max"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/salary_max"
            android:textColor="@color/createVacancyLabel"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

      </android.support.constraint.ConstraintLayout>

      <TextView
          android:id="@+id/textView26"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/created_by"
          android:textColor="@color/createVacancyLabel"
          android:textStyle="bold"/>

      <TextView
          android:id="@+id/cr_vac_created_by"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorBlack"/>

      <TextView
          android:id="@+id/textView27"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/created"
          android:textColor="@color/createVacancyLabel"
          android:textStyle="bold"/>

      <TextView
          android:id="@+id/cr_vac_created"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorBlack"/>

      <View
          android:id="@+id/view3"
          android:layout_width="match_parent"
          android:layout_height="40dp"/>


    </LinearLayout>
  </ScrollView>
</android.support.constraint.ConstraintLayout>